--- a/docs/docs-ref-autogen/excel/excel/excel.iterativecalculation.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.iterativecalculation.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.IterativeCalculation:class'
     summary: |-
-      <span data-ttu-id="731cc-101">表示迭代计算设置。</span><span class="sxs-lookup"><span data-stu-id="731cc-101">Represents the Iterative Calculation settings.</span></span>
+      表示迭代计算设置。
 
-      <span data-ttu-id="731cc-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="731cc-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.IterativeCalculation
     fullName: Excel.IterativeCalculation
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.IterativeCalculation#context:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.IterativeCalculation#set:member(2)'
       - 'excel!Excel.IterativeCalculation#toJSON:member(1)'
   - uid: 'excel!Excel.IterativeCalculation#context:member'
-    summary: <span data-ttu-id="731cc-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="731cc-103">The request context associated with the object.</span></span> <span data-ttu-id="731cc-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="731cc-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.IterativeCalculation#enabled:member'
     summary: |-
-      <span data-ttu-id="731cc-105">如果 Excel 使用迭代来处理循环引用，则为 True。</span><span class="sxs-lookup"><span data-stu-id="731cc-105">True if Excel will use iteration to resolve circular references.</span></span>
+      如果 Excel 使用迭代来处理循环引用，则为 True。
 
-      <span data-ttu-id="731cc-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="731cc-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enabled
     fullName: enabled
     langs:
@@ -52,7 +52,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.IterativeCalculation#load:member(1)'
-    summary: <span data-ttu-id="731cc-107">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="731cc-108">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="731cc-108">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -66,11 +66,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="731cc-109">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="731cc-109">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.IterativeCalculationLoadOptions:interface'
   - uid: 'excel!Excel.IterativeCalculation#load:member(2)'
-    summary: <span data-ttu-id="731cc-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="731cc-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="731cc-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -84,11 +84,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="731cc-112">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-112">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.IterativeCalculation#load:member(3)'
-    summary: <span data-ttu-id="731cc-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="731cc-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="731cc-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -106,7 +106,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="731cc-115">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-115">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -115,9 +115,9 @@ items:
                       }
   - uid: 'excel!Excel.IterativeCalculation#maxChange:member'
     summary: |-
-      <span data-ttu-id="731cc-116">返回或设置 Excel 处理循环引用时迭代之间的最大变化值。</span><span class="sxs-lookup"><span data-stu-id="731cc-116">Returns or sets the maximum amount of change between each iteration as Excel resolves circular references.</span></span>
+      指定在 Excel 解析循环引用时，每次迭代之间的最大更改量。
 
-      <span data-ttu-id="731cc-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="731cc-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxChange
     fullName: maxChange
     langs:
@@ -130,9 +130,9 @@ items:
           - number
   - uid: 'excel!Excel.IterativeCalculation#maxIteration:member'
     summary: |-
-      <span data-ttu-id="731cc-118">返回或设置 Excel 处理循环引用的最大迭代次数。</span><span class="sxs-lookup"><span data-stu-id="731cc-118">Returns or sets the maximum number of iterations that Excel can use to resolve a circular reference.</span></span>
+      指定 Excel 可用于解析循环引用的最大迭代次数。
 
-      <span data-ttu-id="731cc-119">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="731cc-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maxIteration
     fullName: maxIteration
     langs:
@@ -144,9 +144,9 @@ items:
         type:
           - number
   - uid: 'excel!Excel.IterativeCalculation#set:member(1)'
-    summary: '<span data-ttu-id="731cc-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="731cc-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="731cc-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="731cc-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="731cc-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.IterativeCalculation): void`
     name: 'set(properties, options)'
@@ -162,15 +162,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="731cc-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="731cc-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="731cc-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.IterativeCalculation#set:member(2)'
-    summary: '<span data-ttu-id="731cc-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="731cc-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -188,7 +188,7 @@ items:
           type:
             - 'excel!Excel.IterativeCalculation:class'
   - uid: 'excel!Excel.IterativeCalculation#toJSON:member(1)'
-    summary: '<span data-ttu-id="731cc-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="731cc-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="731cc-127">.</span><span class="sxs-lookup"><span data-stu-id="731cc-127"></span></span> <span data-ttu-id="731cc-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="731cc-128"></span></span><!-- --><span data-ttu-id="731cc-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 IterativeCalculation 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.IterativeCalculationData`</span><span class="sxs-lookup"><span data-stu-id="731cc-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.IterativeCalculation object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.IterativeCalculationData`</span></span><!-- --><span data-ttu-id="731cc-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="731cc-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 IterativeCalculation 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.IterativeCalculationData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.IterativeCalculationData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -211,7 +211,7 @@ references:
     name: Excel.Interfaces.IterativeCalculationLoadOptions
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
     name: Interfaces.IterativeCalculationUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.IterativeCalculationData:interface'
     name: Excel.Interfaces.IterativeCalculationData
