--- a/docs/docs-ref-autogen/excel/excel/excel.pagebreak.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pagebreak.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.PageBreak:class'
-    summary: '<span data-ttu-id="c7014-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7014-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.PageBreak
     fullName: Excel.PageBreak
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PageBreak#columnIndex:member'
@@ -22,9 +22,9 @@ items:
       - 'excel!Excel.PageBreak#toJSON:member(1)'
   - uid: 'excel!Excel.PageBreak#columnIndex:member'
     summary: |-
-      <span data-ttu-id="c7014-102">表示分页符的列索引</span><span class="sxs-lookup"><span data-stu-id="c7014-102">Represents the column index for the page break</span></span>
+      指定分页符的列索引
 
-      <span data-ttu-id="c7014-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7014-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
     fullName: columnIndex
     langs:
@@ -36,7 +36,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.PageBreak#context:member'
-    summary: <span data-ttu-id="c7014-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="c7014-104">The request context associated with the object.</span></span> <span data-ttu-id="c7014-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="c7014-105">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PageBreak#delete:member(1)'
     summary: |-
-      <span data-ttu-id="c7014-106">删除分页符对象。</span><span class="sxs-lookup"><span data-stu-id="c7014-106">Deletes a page break object.</span></span>
+      删除分页符对象。
 
-      <span data-ttu-id="c7014-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7014-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: delete()
     fullName: delete()
     langs:
@@ -65,9 +65,9 @@ items:
         description: ''
   - uid: 'excel!Excel.PageBreak#getCellAfterBreak:member(1)'
     summary: |-
-      <span data-ttu-id="c7014-108">获取分页符后的第一个单元格。</span><span class="sxs-lookup"><span data-stu-id="c7014-108">Gets the first cell after the page break.</span></span>
+      获取分页符后的第一个单元格。
 
-      <span data-ttu-id="c7014-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7014-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCellAfterBreak()
     fullName: getCellAfterBreak()
     langs:
@@ -80,7 +80,7 @@ items:
           - 'excel!Excel.Range:class'
         description: ''
   - uid: 'excel!Excel.PageBreak#load:member(1)'
-    summary: <span data-ttu-id="c7014-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c7014-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c7014-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c7014-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -94,11 +94,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="c7014-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="c7014-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.PageBreakLoadOptions:interface'
   - uid: 'excel!Excel.PageBreak#load:member(2)'
-    summary: <span data-ttu-id="c7014-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c7014-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c7014-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c7014-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -112,11 +112,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="c7014-115">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c7014-115">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.PageBreak#load:member(3)'
-    summary: <span data-ttu-id="c7014-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="c7014-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c7014-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="c7014-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -134,7 +134,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="c7014-118">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c7014-118">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -143,9 +143,9 @@ items:
                       }
   - uid: 'excel!Excel.PageBreak#rowIndex:member'
     summary: |-
-      <span data-ttu-id="c7014-119">表示分页符的行索引</span><span class="sxs-lookup"><span data-stu-id="c7014-119">Represents the row index for the page break</span></span>
+      指定分页符的行索引
 
-      <span data-ttu-id="c7014-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7014-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
     fullName: rowIndex
     langs:
@@ -157,7 +157,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.PageBreak#toJSON:member(1)'
-    summary: '<span data-ttu-id="c7014-121">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="c7014-121">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="c7014-122">.</span><span class="sxs-lookup"><span data-stu-id="c7014-122"></span></span> <span data-ttu-id="c7014-123">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="c7014-123"></span></span><!-- --><span data-ttu-id="c7014-124">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 PageBreak 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PageBreakData`</span><span class="sxs-lookup"><span data-stu-id="c7014-124">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.PageBreak object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PageBreakData`</span></span><!-- --><span data-ttu-id="c7014-125">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="c7014-125">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 PageBreak 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.PageBreakData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -170,7 +170,7 @@ items:
           - 'excel!Excel.Interfaces.PageBreakData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
